  * accompany each entry with github issue/PR number (Issue #xyz)
  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/16 kain88-de, fiona-naughton, richardjgowers, tyler.je.reddy, jdetle
         euhruska, orbeckst, rbrtdlg, jbarnoud, wouterboomsma, shanmbic,
         dotsdl, manuel.nuno.melo

  * 0.16.0

Enhancements
  * Added dynamic selections (addresses Issues #175 and #1074).
  * Added 'MemoryReader' class to allow manipulation of trajectory data
    in-memory, which can provide substantial speed-ups to certain
    calculations.
  * Universe creation now takes an 'in_memory' option, which will
    transfer the corresponding trajectory to memory. Likewise a new
    'Universe.transfer_to_memory()' method makes it possible to make
    this transfer after construction of the universe
  * Added 'in_memory' option to 'rms_fit_trj', which makes it possible
    to do in-place (in-memory) alignment of trajectories.
  * All classes derived from 'AnalysisBase' now display a ProgressMeter
    with 'quiet=False'
  * The 'run' method from all 'AnalysisBase' derived classes return the
    class itself.
  * Added boolean flag at lib.distances.USED_OPENMP to reveal if
    OpenMP was used in compilation (Issue #883)
  * Added Principal Component Analysis module for linear dimensionality
    reduction.
  * Added Auxiliary module for reading additional timeseries data alongside
    trajectories (Issue #785)
  * Added AnalysisFromFunction & analysis_class, see (Issue #946 and PR #950)
  * Established the MDAnalysis.analysis.legacy module for unmaintained
    analysis code (Issue #743)
  * Added ProgressMeter to 'transfer_to_memory' function, to show progress
    of loading trajectory to memory (Issue #1028 and PR #1055).
  * Selecting atoms by resid now respects icodes if they were present. Ie
    select_atoms('resid 163A') works! (Issue #839 PR #1066)