@@ -79,6 +79,8 @@ Chronological list of authors
   - Matteo Tiberti
   - Tone Bengtsen
   - Shantanu Srivastava
+ 2017
+  - Utkarsh Bansal
 
 External code
 -------------
